@@ -1,4 +1,4 @@
-# vnStat 2.9 configuration file
+# vnStat 2.10 configuration file
 #
 # lines starting with # or ; are comments, everything has default
 # values, remove ; before each option to change its value
@@ -74,6 +74,10 @@
 # 2 = method 1 followed by case insensitive exact match of alias
 # 3 = method 2 followed by case insensitive beginning match of alias
 ;InterfaceMatchMethod 3
+
+# visibility of estimate line and text used in it
+;EstimateVisible 1
+;EstimateText "estimated"
 
 
 # vnstatd
