@@ -56,6 +56,17 @@ has been configured with a value of 1 or 2 to make the bar column visible.
 for vnstati)
 
 .TP
+.B EstimateText
+Replace default "estimated" text on the estimate line with custom text.
+Limited to 9 characters. (vnstat and vnstati only)
+
+.TP
+.B EstimateVisible
+Show a line with traffic estimation for the shown time period as the last line
+of the output in output modes supporting it. 1 = enabled, 0 = disabled.
+(vnstat and vnstati only)
+
+.TP
 .B HourlyDecimals
 Number of decimals to use in hourly graph output. Value range: 0..2
 (vnstat only)
